// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: basic usage css 1`] = `
".MuiPaper-root {
  background-color: #fff;
}
.MuiPaper-rounded {
  border-radius: 2px;
}
.MuiPaper-shadow0 {
  box-shadow: none;
}
.MuiPaper-shadow1 {
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow2 {
  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow3 {
  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow4 {
  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow5 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow6 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow7 {
  box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow8 {
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow9 {
  box-shadow: 0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow10 {
  box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow11 {
  box-shadow: 0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow12 {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow13 {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow14 {
  box-shadow: 0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow15 {
  box-shadow: 0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow16 {
  box-shadow: 0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow17 {
  box-shadow: 0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow18 {
  box-shadow: 0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow19 {
  box-shadow: 0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow20 {
  box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow21 {
  box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow22 {
  box-shadow: 0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow23 {
  box-shadow: 0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow24 {
  box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12);
}
.MuiAppBar-root {
  width: 100%;
  display: flex;
  z-index: 1100;
  box-sizing: border-box;
  flex-shrink: 0;
  flex-direction: column;
}
.MuiAppBar-positionFixed {
  top: 0;
  left: auto;
  right: 0;
  position: fixed;
}
.MuiAppBar-positionAbsolute {
  top: 0;
  left: auto;
  right: 0;
  position: absolute;
}
.MuiAppBar-positionStatic {
  position: static;
  flex-shrink: 0;
}
.MuiAppBar-colorDefault {
  color: rgba(0, 0, 0, 0.87);
  background-color: #f5f5f5;
}
.MuiAppBar-colorPrimary {
  color: rgba(255, 255, 255, 1);
  background-color: #3f51b5;
}
.MuiAppBar-colorAccent {
  color: rgba(255, 255, 255, 1);
  background-color: #ff4081;
}
.MuiToolbar-root {
  display: flex;
  position: relative;
  min-height: 56px;
  align-items: center;
}
@media (min-width:0px) and (orientation: landscape) {
  .MuiToolbar-root {
    min-height: 48px;
  }
}
@media (min-width:600px) {
  .MuiToolbar-root {
    min-height: 64px;
  }
}
.MuiToolbar-gutters {
  padding-left: 16px;
  padding-right: 16px;
}
@media (min-width:600px) {
  .MuiToolbar-gutters {
    padding-left: 24px;
    padding-right: 24px;
  }
}
.MuiTypography-root {
  margin: 0;
  display: block;
}
.MuiTypography-display4 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 7rem;
  font-weight: 300;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.14286em;
  margin-left: -.06em;
  letter-spacing: -.04em;
}
.MuiTypography-display3 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 3.5rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.30357em;
  margin-left: -.04em;
  letter-spacing: -.02em;
}
.MuiTypography-display2 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 2.8125rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.06667em;
  margin-left: -.04em;
}
.MuiTypography-display1 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 2.125rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.20588em;
  margin-left: -.04em;
}
.MuiTypography-headline {
  color: rgba(0, 0, 0, 0.87);
  font-size: 1.5rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.35417em;
}
.MuiTypography-title {
  color: rgba(0, 0, 0, 0.87);
  font-size: 1.3125rem;
  font-weight: 500;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.16667em;
}
.MuiTypography-subheading {
  color: rgba(0, 0, 0, 0.87);
  font-size: 1rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.5em;
}
.MuiTypography-body2 {
  color: rgba(0, 0, 0, 0.87);
  font-size: 0.875rem;
  font-weight: 500;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.71429em;
}
.MuiTypography-body1 {
  color: rgba(0, 0, 0, 0.87);
  font-size: 0.875rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.46429em;
}
.MuiTypography-caption {
  color: rgba(0, 0, 0, 0.54);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.375em;
}
.MuiTypography-button {
  font-size: 0.875rem;
  font-weight: 500;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  text-transform: uppercase;
}
.MuiTypography-alignLeft {
  text-align: left;
}
.MuiTypography-alignCenter {
  text-align: center;
}
.MuiTypography-alignRight {
  text-align: right;
}
.MuiTypography-alignJustify {
  text-align: justify;
}
.MuiTypography-noWrap {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.MuiTypography-gutterBottom {
  margin-bottom: 0.35em;
}
.MuiTypography-paragraph {
  margin-bottom: 16px;
}
.MuiTypography-colorInherit {
  color: inherit;
}
.MuiTypography-colorPrimary {
  color: #3f51b5;
}
.MuiTypography-colorSecondary {
  color: rgba(0, 0, 0, 0.54);
}
.MuiTypography-colorAccent {
  color: #f50057;
}
.MuiTypography-colorError {
  color: #ff1744;
}
.MuiTouchRipple-root {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  z-index: 0;
  position: absolute;
  overflow: hidden;
  border-radius: inherit;
  pointer-events: none;
}
.MuiTouchRipple-wrapper {
  opacity: 1;
}
.MuiTouchRipple-wrapperLeaving {
  opacity: 0;
  animation: mui-ripple-exit 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-wrapperPulsating {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  position: absolute;
  animation: mui-ripple-pulsate 1500ms cubic-bezier(0.4, 0, 0.2, 1) 200ms infinite;
}
@keyframes mui-ripple-enter {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes mui-ripple-exit {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes mui-ripple-pulsate {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(0.9);
  }
  100% {
    transform: scale(1);
  }
}
.MuiTouchRipple-ripple {
  top: 0;
  left: 0;
  width: 50px;
  height: 50px;
  opacity: 0;
  position: absolute;
  background: currentColor;
  border-radius: 50%;
}
.MuiTouchRipple-rippleVisible {
  opacity: 0.3;
  transform: scale(1);
  animation: mui-ripple-enter 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-rippleFast {
  animation-duration: 200ms;
}
.MuiButtonBase-root {
  color: inherit;
  border: 0;
  cursor: pointer;
  display: inline-flex;
  outline: none;
  position: relative;
  appearance: none;
  align-items: center;
  user-select: none;
  border-radius: 0;
  justify-content: center;
  text-decoration: none;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
.MuiButtonBase-root::-moz-focus-inner {
  border-style: none;
}
.MuiButtonBase-disabled {
  cursor: default;
  pointer-events: none;
}
.MuiButton-root {
  color: rgba(0, 0, 0, 0.87);
  padding: 8px 16px;
  min-width: 88px;
  font-size: 0.875rem;
  box-sizing: border-box;
  min-height: 36px;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  line-height: 1.4em;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  font-weight: 500;
  border-radius: 2px;
  text-transform: uppercase;
}
.MuiButton-root:hover {
  text-decoration: none;
  background-color: rgba(0, 0, 0, 0.12);
}
@media (hover: none) {
  .MuiButton-root:hover {
    background-color: transparent;
  }
}
.MuiButton-root:hover.MuiButton-disabled {
  background-color: transparent;
}
.MuiButton-dense {
  padding: 7px 8px;
  min-width: 64px;
  font-size: 0.8125rem;
  min-height: 32px;
}
.MuiButton-label {
  width: 100%;
  display: inherit;
  align-items: inherit;
  justify-content: inherit;
}
.MuiButton-flatPrimary {
  color: #3f51b5;
}
.MuiButton-flatPrimary:hover {
  background-color: rgba(63, 81, 181, 0.12);
}
@media (hover: none) {
  .MuiButton-flatPrimary:hover {
    background-color: transparent;
  }
}
.MuiButton-flatAccent {
  color: #ff4081;
}
.MuiButton-flatAccent:hover {
  background-color: rgba(255, 64, 129, 0.12);
}
@media (hover: none) {
  .MuiButton-flatAccent:hover {
    background-color: transparent;
  }
}
.MuiButton-flatContrast {
  color: rgba(255, 255, 255, 1);
}
.MuiButton-flatContrast:hover {
  background-color: rgba(255, 255, 255, 0.12);
}
@media (hover: none) {
  .MuiButton-flatContrast:hover {
    background-color: transparent;
  }
}
.MuiButton-colorInherit {
  color: inherit;
}
.MuiButton-raised {
  color: rgba(0, 0, 0, 0.87);
  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12);
  background-color: #e0e0e0;
}
.MuiButton-raised.MuiButton-keyboardFocused {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
}
.MuiButton-raised:active {
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}
.MuiButton-raised.MuiButton-disabled {
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}
.MuiButton-raised:hover {
  background-color: #d5d5d5;
}
@media (hover: none) {
  .MuiButton-raised:hover {
    background-color: #e0e0e0;
  }
}
.MuiButton-raised:hover.MuiButton-disabled {
  background-color: rgba(0, 0, 0, 0.12);
}
@media (hover: none) {
  .MuiButton-raised:hover.MuiButton-disabled {
    background-color: #e0e0e0;
  }
}
.MuiButton-raisedPrimary {
  color: rgba(255, 255, 255, 1);
  background-color: #3f51b5;
}
.MuiButton-raisedPrimary:hover {
  background-color: #303f9f;
}
@media (hover: none) {
  .MuiButton-raisedPrimary:hover {
    background-color: #3f51b5;
  }
}
.MuiButton-raisedAccent {
  color: rgba(255, 255, 255, 1);
  background-color: #ff4081;
}
.MuiButton-raisedAccent:hover {
  background-color: #f50057;
}
@media (hover: none) {
  .MuiButton-raisedAccent:hover {
    background-color: #ff4081;
  }
}
.MuiButton-raisedContrast {
  color: rgba(255, 255, 255, 1);
}
.MuiButton-disabled {
  color: rgba(0, 0, 0, 0.26);
}
.MuiButton-fab {
  width: 56px;
  height: 56px;
  padding: 0;
  min-width: 0;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
  border-radius: 50%;
}
.MuiButton-fab:active {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12);
}
.MuiSvgIcon-root {
  fill: currentColor;
  width: 24px;
  height: 24px;
  display: inline-block;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  user-select: none;
  flex-shrink: 0;
}
.MuiIconButton-root {
  flex: 0 0 auto;
  width: 48px;
  color: rgba(0, 0, 0, 0.54);
  height: 48px;
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 50%;
}
.MuiIconButton-colorAccent {
  color: #ff4081;
}
.MuiIconButton-colorContrast {
  color: rgba(255, 255, 255, 1);
}
.MuiIconButton-colorPrimary {
  color: #3f51b5;
}
.MuiIconButton-colorInherit {
  color: inherit;
}
.MuiIconButton-disabled {
  color: rgba(0, 0, 0, 0.26);
}
.MuiIconButton-label {
  width: 100%;
  display: flex;
  align-items: inherit;
  justify-content: inherit;
}
.MuiIconButton-icon {
  width: 1em;
  height: 1em;
}
.MuiIconButton-keyboardFocused {
  background-color: rgba(0, 0, 0, 0.12);
}
.fcAppBar-root {
  z-index: 1301;
  position: absolute;
  transition: width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,margin 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
}
.fcAppBar-shift {
  width: calc(100% - 240px);
  transition: width 225ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,margin 225ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
  margin-left: 240px;
}
.fcAppBar-main {
  flex: 1;
}
.fcAppBar-userName {
  margin-right: 16px;
}
.fcAppBar-loginButton {
  margin-right: 16px;
}
.fcAppBar-menuButton {
  margin-left: 8px;
  margin-right: 32px;
}
.fcAppBar-hide {
  display: none;
}"
`;

exports[`snapshot: basic usage html 1`] = `
<header
  className="MuiPaper-root MuiPaper-shadow4 MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed fcAppBar-root"
>
  <div
    className="MuiToolbar-root"
  >
    <button
      aria-label="open drawer"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorContrast fcAppBar-menuButton"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <h2
      className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-noWrap fcAppBar-main"
    >
      <span>
        Logo
      </span>
    </h2>
    <p
      className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit MuiTypography-noWrap fcAppBar-userName"
    >
      Ivanov Ivan
    </p>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-flatContrast fcAppBar-loginButton"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Sign out
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</header>
`;

exports[`snapshot: className css 1`] = `""`;

exports[`snapshot: className html 1`] = `
<header
  className="MuiPaper-root MuiPaper-shadow4 MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed test-class fcAppBar-root"
>
  <div
    className="MuiToolbar-root"
  >
    <button
      aria-label="open drawer"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorContrast fcAppBar-menuButton"
      disabled={false}
      onBlur={[Function]}
      onClick={undefined}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiIconButton-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <h2
      className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-noWrap fcAppBar-main"
    >
      <span />
    </h2>
    <p
      className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit MuiTypography-noWrap fcAppBar-userName"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-flatContrast fcAppBar-loginButton"
      disabled={false}
      onBlur={[Function]}
      onClick={undefined}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Sign in
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</header>
`;
